--- a/public/css/common.css
+++ b/public/css/common.css
@@ -6,6 +6,8 @@ body{
 	width:100%;
 	position:relative;
 	overflow:hidden;
+    margin-top:0;
+    padding:0;
     
 }
 .company_Logo_Container{
@@ -21,6 +23,9 @@ body{
 }
 /**Media queries**/
     @media (max-width:900px){
+        body{
+            overflow-x:hidden;
+        }
     	.navMenu{
             padding:0;
             margin:0;
