--- a/public/css/contactUs.css
+++ b/public/css/contactUs.css
@@ -1,85 +1,136 @@
-	.contactBody{
-		background-image:url("../images/light-bulb-4514505_1920.jpg");
-		background-size:100% 100%;
-		background-position:center;
-		background-repeat:no-repeat;
-		background-attachment: fixed;
+body{
+	/*background-color:#424242;*/
+	background-color:rgb(20,20,20);
+	margin:0;
+	padding:0;
+	color:white;
+	font-size:100%;
+}
+hr{
+	background-color:white;
+}
+#getInTouch{
+	text-align:center;
+	color:white;
+}
+.columns{
+	background-color:red;
+}
+.row{
+	padding-top:20px;
+	
+}
+.general_Information{
 
-	}
+}
 
-	.outer_contactUs {
-		width: 100%;
+#txtArea{
+	height:45%;
+}
+#txtName,#txtEmail,#txtArea{
+	border-radius:5px;
+	outline:none;
+	margin-top:7px;
+	padding:5px;
+	border:0px solid;
+	width:90%;
+}
+#txtName{
+	margin-top:0;
+}
+#txtEmail:active,#txtName:active,#txtArea:active{
+	
+}
+#tel_Link{
+	text-decoration: none;
+	color:white;
+}
+#letter_count{
+		text-align:right;
+		width:90%;
+		margin-left:5%;
 	}
-	.contactBody {
-		background-color: rgb(31, 137, 152);
-		background-size: cover;
-		margin: 0;
-		padding: 0;
-	}
-	.contact_form {
-		position: absolute;
-		width: 90%;
-		max-width: 600px;
-		background-color: #37474f;
-		left: 50%;
-		top: 50%;
-		transform: translate(-50%, -50%);
-		padding: 30px 40px;
-		box-sizing: border-box;
-		border-radius: 8px;
-		text-align: center;
-		box-shadow: 0 0 20px #000000b3;
-
-	}
-	.contact_form h1 {
-		margin-top: 0;
-		font-weight: 700;
-		color: rgb(29, 163, 158);
-	}
-	.txtb {
-		border: 1px solid grey;
-		margin: 5px 0;
-		padding: 12px 18px;
-		border-radius: 8px;
-	}
-	.txtb:hover {
-		box-shadow: 0 0.4rem 1.4rem 0 rgb(29, 163, 158);
-		transform: translateY(-0.1rem);
-		transition: transform 150ms;
-	}
-	.txtb label {
-		display: block;
-		text-align: left;
-		text-transform: uppercase;
-		font-size: 14px;
-		font-weight: 600;
-		color: rgb(29, 163, 158);
-	}
-	.txtb input,.txtb textarea{
-		width: 100%;
-		border: none;
-		background: none;
-		outline: none;
-		font-size: 18px;
-		margin-top: 6px;
-		color: #e0e0e0;
-	}
-	.btn {
+.btn {
 		display: block;
 		background: #ffea00;
 		text-transform: uppercase;
 		cursor: pointer;
 		margin-top: 8px;
-		width: 100%;
+		width: 90%;
+		
 	}
 	.btn:hover {
 		box-shadow: 0 0.4rem 1.4rem 0 #ffea00;
 		transform: translateY(-0.1rem);
 		transition: transform 150ms;
 	}
-	.main_contact_content {
-		position:absolute;
-    	height:100%;
-    	width:100%;
-    	
+
+
+/*Media queries*/
+	/*Desktop*/
+@media(min-width:901px){
+	.row{
+		width:90%;
+		margin-left:5%;
+		margin-top:0;
+		top:0;
+		border-radius:10px 10px 10px 10px;
 	}
+	.contact_form{
+		margin-top:-100px;
+	}
+	.general_Information{
+		margin-top:-100px;
+		font-size:20px;
+		padding:100px;
+		padding-top:0;
+	}
+	#email_Link{
+		text-decoration:none;
+		color:white;
+	}
+	label{
+		margin-left:10px;
+	}
+	ul >i{
+		position:absolute;
+	}
+	
+}
+/*IPad Pro screen*/
+@media(min-width:1024px and min-height:1366px){
+	.row> .general_Information, .contact_form{
+		margin-top:-400px;
+	}
+}
+
+/*Mobile*/
+@media(max-width:1023px){
+	body{
+		text-align:center;
+	}
+	.row> .general_Information, .contact_form{
+		margin-top:0px;
+	}
+	.contact_form{
+		overflow:hidden;
+		min-height:300px;
+
+	}
+	.general_Information >hr{
+		width:50%;
+		margin-left:25%;
+	}
+	.btn{
+		margin-left:5%;
+	}
+	ul >i{
+		display:flex;
+		position:absolute;
+		margin-left:15%;
+	}
+
+	
+}
+
+
